# doc/api.yaml
@@ -239,15 +239,7 @@ paths:
           description: invalid username
   
   /users/{id}/conversations:
-    get:
-      tags: [chat management]
-      summary: gets all the conversationof the user
-      description: |
-         gets all the conversation of the user 
-      operationId: getMyConversations
-      security:
-        - BearerAuth: []   
-      parameters:
+    parameters:
       - name: id
         in: path
         description: id utente
@@ -256,6 +248,14 @@ paths:
           description: temp
           type: integer
           minimum: 0
+    get:
+      tags: [chat management]
+      summary: gets all the conversationof the user
+      description: |
+         gets all the conversation of the user 
+      operationId: getMyConversations
+      security:
+        - BearerAuth: []   
       responses:
         '200':
           description: list of the users chat
@@ -272,16 +272,22 @@ paths:
           description: not logged in
         '404': 
           description: The requested resource could not be found but may be available in the future
-  /users/{id}/conversations/{conversationId}/messages:
     post:
-      tags: ["message management"]
-      summary: send a message in a chat.
-      description: |
-        send a message to a chat or a group
-      operationId: sendMessage
+      tags: ["chat management"]
+      summary: create a new group
+      description: create a new group
+      operationId: createGroup
       security:
         - BearerAuth: []   
-      parameters:
+      responses:
+        '204': 
+          description: group created
+        '401':
+          description: not logged in
+        '403':
+          description: not authorized
+  /users/{id}/conversations/{conversationId}/messages:
+    parameters:
       - name: id
         in: path
         description: id utente
@@ -298,6 +304,15 @@ paths:
           description: temp
           type: integer
           minimum: 0
+    post:
+      tags: ["message management"]
+      summary: send a message in a chat.
+      description: |
+        send a message to a chat or a group
+      operationId: sendMessage
+      security:
+        - BearerAuth: []   
+      
       requestBody: 
         description: the messages specifications
         content:
@@ -324,6 +339,30 @@ paths:
           description: message successfully sent
         '401':
           description: not logged in
+    get:
+      tags: [chat management]
+      summary: gets all the messages of the conversation
+      description: |
+         gets all the messages of the conversation
+      operationId: getMessages
+      security:
+        - BearerAuth: []   
+      responses:
+        '200':
+          description: list of the messages in the chat
+          content:
+            application/json:
+              schema:
+                description: temp
+                type: array
+                minItems: 0
+                maxItems: 32
+                items:
+                  $ref: '#/components/schemas/textMessage'
+        '401':
+          description: not logged in
+        '404': 
+          description: The requested resource could not be found but may be available in the future
   /users/{id}/conversations/{conversationId}/messages/{messageId}:
     parameters:
       - name: id
@@ -577,14 +616,7 @@ paths:
         '403':
           description: not authorized
   /users/{id}/photo:
-    post:
-      tags: ["user profile"]
-      summary: set the photo of the user
-      description: change the photo of the user, if successful returns the user
-      operationId: setMyPhoto
-      security:
-        - BearerAuth: []   
-      parameters:
+    parameters:
       - name: id
         in: path
         description: id utente
@@ -593,6 +625,13 @@ paths:
           description: temp
           type: integer
           minimum: 0
+    post:
+      tags: ["user profile"]
+      summary: set the photo of the user
+      description: change the photo of the user, if successful returns the user
+      operationId: setMyPhoto
+      security:
+        - BearerAuth: []   
       requestBody:
         description: the new photo
         content:
@@ -617,6 +656,33 @@ paths:
                 $ref: '#/components/schemas/user'
         '401':
           description: not logged in
+    get:
+      tags: [user profile]
+      summary: gets the photo of the user
+      description: |
+         gets the photo of the user
+      operationId: getPhoto
+      security:
+        - BearerAuth: []   
+      responses:
+        '200':
+          description: the photo
+          content:
+            application/json:
+              schema:
+                description: temp
+                type: object
+                properties:
+                  photo:
+                    description: the photo
+                    type: string
+                    format: binary
+                    minLength: 1
+                    maxLength: 1024
+        '401':
+          description: not logged in
+        '404': 
+          description: The requested resource could not be found but may be available in the future
   /users/{id}/conversations/{conversationId}/groupphoto:
     post:
       tags: ["chat management"]
@@ -709,175 +775,6 @@ paths:
           description: unauthorized to delete this message
         '404':
           description: The requested resource could not be found 
-# aggiunti post 30
-  /users/:id/conversations/:conversationId/messages:
-    get:
-      tags: [chat management]
-      summary: gets all the messages of the conversation
-      description: |
-         gets all the messages of the conversation
-      operationId: getMessages
-      security:
-        - BearerAuth: []   
-      parameters:
-      - name: id
-        in: path
-        description: id utente
-        required: true
-        schema:
-          description: temp
-          type: integer
-          minimum: 0
-      - name: conversationId
-        in: path
-        description: id conversation
-        required: true
-        schema:
-          description: temp
-          type: integer
-          minimum: 0
-      responses:
-        '200':
-          description: list of the messages in the chat
-          content:
-            application/json:
-              schema:
-                description: temp
-                type: array
-                minItems: 0
-                maxItems: 32
-                items:
-                  $ref: '#/components/schemas/textMessage'
-        '401':
-          description: not logged in
-        '404': 
-          description: The requested resource could not be found but may be available in the future
-  /users/:id/photo:
-    get:
-      tags: [user profile]
-      summary: gets the photo of the user
-      description: |
-         gets the photo of the user
-      operationId: getPhoto
-      security:
-        - BearerAuth: []   
-      parameters:
-      - name: id
-        in: path
-        description: id utente
-        required: true
-        schema:
-          description: temp
-          type: integer
-          minimum: 0
-      responses:
-        '200':
-          description: the photo
-          content:
-            application/json:
-              schema:
-                description: temp
-                type: object
-                properties:
-                  photo:
-                    description: the photo
-                    type: string
-                    format: binary
-                    minLength: 1
-                    maxLength: 1024
-        '401':
-          description: not logged in
-        '404': 
-          description: The requested resource could not be found but may be available in the future
-  /users/:id/conversations:
-    post:
-      tags: ["chat management"]
-      summary: create a new group
-      description: create a new group
-      operationId: createGroup
-      security:
-        - BearerAuth: []   
-      parameters:
-      - name: id
-        in: path
-        description: id utente
-        required: true
-        schema:
-          description: temp
-          type: integer
-          minimum: 0
-      responses:
-        '204': 
-          description: group created
-        '401':
-          description: not logged in
-        '403':
-          description: not authorized
-  /users/:id:
-    post:
-      tags: ["chat management"]
-      summary: create a new chat
-      description: create a new chat
-      operationId: createChat
-      security:
-        - BearerAuth: []   
-      parameters:
-      - name: id
-        in: path
-        description: id utente
-        required: true
-        schema:
-          description: temp
-          type: integer
-          minimum: 0
-      requestBody:
-        description: the name of the user you want to chat with
-        content:
-          application/json:
-            schema:
-              description: temp
-              type: object
-              properties:
-                sgn_name:
-                  description: the name of the user you want to chat with
-                  type: string
-                  pattern: '^.*?$'
-                  minLength: 1
-                  maxLength: 32
-        required: true
-      responses:
-        '204': 
-          description: chat created
-        '401':
-          description: not logged in
-        '403':
-          description: not authorized
-  /users/:id/conversations/:conversationId/messages/:messageId/reactions:
-    parameters:
-      - name: id
-        in: path
-        description: id utente
-        required: true
-        schema:
-          description: temp
-          type: integer
-          minimum: 0
-      - name: conversationId
-        in: path
-        description: id conversation
-        required: true
-        schema:
-          description: temp
-          type: integer
-          minimum: 0
-      - name: messageId
-        in: path
-        description: id of the message
-        required: true
-        schema:
-          description: temp
-          type: integer
-          minimum: 0
     post:
       tags: ["message management"]
       summary: react an existing message
@@ -940,6 +837,46 @@ paths:
           description: not logged in
         '404': 
           description: The requested resource could not be found but may be available in the future
+# aggiunti post 30
+  /users/{id}:
+    post:
+      tags: ["chat management"]
+      summary: create a new chat
+      description: create a new chat
+      operationId: createChat
+      security:
+        - BearerAuth: []   
+      parameters:
+      - name: id
+        in: path
+        description: id utente
+        required: true
+        schema:
+          description: temp
+          type: integer
+          minimum: 0
+      requestBody:
+        description: the name of the user you want to chat with
+        content:
+          application/json:
+            schema:
+              description: temp
+              type: object
+              properties:
+                sgn_name:
+                  description: the name of the user you want to chat with
+                  type: string
+                  pattern: '^.*?$'
+                  minLength: 1
+                  maxLength: 32
+        required: true
+      responses:
+        '204': 
+          description: chat created
+        '401':
+          description: not logged in
+        '403':
+          description: not authorized
   /users/{id}/conversations/{conversationId}:
     get:
       tags: [chat management]
